Prepared for BeanMapper(-Spring) update